# rest-api-lib-creator

./: .bumpversion.cfg  .travis.yml  LICENSE  MANIFEST.in  README.md  example.py  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
rest_api_lib_creator/: __init__.py  compat.py  core.py  datastructures.py  mixins.py  pagination_classes.py  utils.py
tests/: test_core.py  test_mixins.py  test_utils.py
