[metadata]
name = rest-api-lib-creator
version = 0.4.0
description = Boilerplate-free way for creating libs for REST APIs
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Waitman
author_email = filwaitman@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source = https://github.com/filwaitman/rest-api-lib-creator

[options]
include_package_data = true
packages = rest_api_lib_creator

[flake8]
max-line-length = 132
exclude = .tox,.git
ignore = F405,W504

[isort]
line_length = 132
multi_line_output = 5
known_tests = tests
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,TESTS

[coverage:run]
source = rest_api_lib_creator
